Project

General

Profile

Actions

Bug #45023

closed

Object corpus generation is currently broken

Added by Vladimir Bashkirtsev about 4 years ago. Updated about 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

I have tried to generate object corpus for readable.sh test in 15.2.1 by running src/script/gen-corpus.sh but it fails with:

In file included from /home/build/ceph/ceph-15.2.1/src/include/encoding.h:41,
from /home/build/ceph/ceph-15.2.1/src/include/uuid.h:9,
from /home/build/ceph/ceph-15.2.1/src/include/types.h:21,
from /home/build/ceph/ceph-15.2.1/src/msg/msg_types.h:23,
from /home/build/ceph/ceph-15.2.1/src/common/options.h:11,
from /home/build/ceph/ceph-15.2.1/src/common/config.h:23,
from /home/build/ceph/ceph-15.2.1/src/common/config_proxy.h:6,
from /home/build/ceph/ceph-15.2.1/src/common/ceph_context.h:37,
from /home/build/ceph/ceph-15.2.1/src/compressor/lz4/CompressionPluginLZ4.cc:17:
/home/build/ceph/ceph-15.2.1/src/include/denc.h: In member function ‘void DencDumper<T>::dump() const’:
/home/build/ceph/ceph-15.2.1/src/include/denc.h:127:19: error: ‘using bufferlist = class ceph::buffer::v15_2_0::list’ {aka ‘class ceph::buffer::v15_2_0::list’} has no member named ‘copy’
127 | appender.bl.copy(bl_offset + space_offset, bl_delta - space_offset, dump_bl); | ^~~~

Looking into the code ceph::bufferlist::contiguous_appender does not have a copy() method. How to generate object corpus for 15.2.1?


Related issues 1 (0 open1 closed)

Copied to Ceph - Backport #45207: octopus: Object corpus generation is currently brokenResolvedNathan CutlerActions
Actions #1

Updated by Greg Farnum about 4 years ago

  • Subject changed from Object corpus generation to Object corpus generation is currently broken

Hmm this script is run sporadically and apparently it's been a while. I'll bring this up at our tech leads meeting but you may need to update it yourself for bufferlist interface changes... :/

Actions #2

Updated by Josh Durgin about 4 years ago

  • Assignee set to Josh Durgin
Actions #3

Updated by Josh Durgin about 4 years ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 34576
Actions #4

Updated by Josh Durgin about 4 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to octopus
Actions #5

Updated by Nathan Cutler about 4 years ago

  • Copied to Backport #45207: octopus: Object corpus generation is currently broken added
Actions #6

Updated by Nathan Cutler about 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF